forth/test/fail/test_dot_call_local_name.af
\ Must fail to compile.
fun: test_dot_call_local_name_fail { .val -- err }
end
